fixed spacing from title to table

--- a/style.css
+++ b/style.css
@@ -109,6 +109,7 @@ body {
   width: 100%;
   border-collapse: collapse;
   font-size: 16px;
+  margin-top: 20px;
 }
 
 #workout-table th {
